--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<div class="soon animated flipInX"></div>
 		</div>
 		<br>
-		<div  class="message"><br>Hack Bells<br></div>
-		
-		
+		<div  class="message">Hack Bells<p>Sponsor us!</p><a href="mailto:sponsor@hackbells.tech">sponsor@hackbells.tech</a></div>
+
+
 		<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
 		<script src='js/snowfall.jquery.min.js'></script>
 		<script src="js/flipclock.js"></script>
