--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 			<div class="soon animated flipInX"></div>
 		</div>
 		<br>
+		<div  class="message">Hack Bells</div>
+		
 
 
 		<script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
